<resources>
    <string name="app_name">SimpleBlogApp</string>
    <string name="mvvm_app">MVVM App</string>
    <string name="mvc_app">MVC App</string>
    <string name="title">Title:</string>
    <string name="post_body">Post Body</string>
    <string name="user">User:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="body">Body</string>
    <string name="comments">COMMENTS</string>
    <string name="comment">Type Comment</string>
    <string name="post">Post</string>
    <string name="no_posts_to_show">No posts to show</string>
</resources>