<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvvm.ui.fragments.SearchFragment"
    android:background="@color/ash">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ash"
        android:fontFamily="@font/abril_fatface"
        android:padding="@dimen/text_dp_10"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_posts"
        android:layout_margin="@dimen/text_dp_10"
        android:padding="@dimen/text_dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_baseline_search_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ProgressBar
        android:id="@+id/search_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/no_posts_to_show"
        android:textSize="@dimen/text_sp_20"
        app:layout_constraintBottom_toBottomOf="@+id/search_posts_rv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_posts_rv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_0"
        android:backgroundTint="@color/ash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_posts" />

</androidx.constraintlayout.widget.ConstraintLayout>