<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvvm.ui.fragments.SinglePostFragment">

    <TextView
        android:id="@+id/single_post_title"
        android:layout_width="@dimen/size_dp_0"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:padding="@dimen/text_dp_10"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_sp_30"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/single_post_body"
        android:layout_width="@dimen/size_dp_0"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:padding="@dimen/text_dp_5"
        android:text="@string/body"
        app:layout_constraintTop_toBottomOf="@+id/single_post_title"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline7" />

    <TextView
        android:id="@+id/comments_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:textStyle="bold"
        android:padding="@dimen/text_dp_10"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/single_post_body"
        app:layout_constraintTop_toBottomOf="@+id/single_post_body" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/post_comments_rv"
        android:layout_width="@dimen/size_dp_0"
        android:layout_height="@dimen/size_dp_0"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/comments_title" />


    <ProgressBar
        android:id="@+id/comment_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />


</androidx.constraintlayout.widget.ConstraintLayout>